# pv

./: .gitignore  Cargo.toml  LICENSE  deyimler.sql  deyimler_atasozleri.json  readme.md
src/: main.rs  proverb.rs  quiz.rs  tdk_api.rs
src/pv.db/: 000011.sst  IDENTITY  LOG  LOG.old.1730633806308927  MANIFEST-000015  OPTIONS-000017  OPTIONS-000019
