[package]
name = "pv"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
polodb_core = "5.1.2"
serde_json = "1.0.132"
anyhow = "1.0.92"
getopts = "0.2.21"
serde = "1.0.214"
regex = "1.11.1"
rand = "0.8.5"
emojic = "0.4.1"
asky = "0.1.1"
